# tgdim

./: CMakeLists.txt  TemporalGraph.cc  TemporalGraph.h  allvertices.cc  arraysort.cc  arraysort.h  benchmark.cc  create.cc  exp-query.cc  leaves.cc  params.h  prb2d.cc  sort.cc  space-echo.sh  space.sh  stats.cc  time-avg.sh  time.sh  update.cc  vertices.cc
cdswrapper/include/cdswrapper/: sdsl_bitvectors.h
libcqtree/: CMakeLists.txt  Make.helper.cmake
libcqtree/examples/: Makefile  prb10d.cc  test8.input
libcqtree/src/: CompactQtree.cc  CompactQtree.h  MXCompactQtree.cc  MXCompactQtree.h  MXCompactQtreeFixed.cc  MXCompactQtreeFixed.h  MyCoder.cc  MyCoder.h  MyCompressionCoder.h  MyHuffmanCoder.h  PRB2CompactQtree.cc  PRB2CompactQtree.h  PRB2XORCompactQtree.cc  PRB2XORCompactQtree.h  PRBCompactQtree.cc  PRBCompactQtree.h  PRWCompactQtree.cc  PRWCompactQtree.h  XorCode.cc  XorCode.h  XorCompressedVector.h  XorHuffmanVector.h  bitvector.cc  bitvector.h  count_ops.h  point.h  test.cc  utils.cc  utils.h
libcqtree/test/: code_test.cc  mx_test.cc  mxf_test.cc  point_test.cc  prb2_test.cc  prb2xor_test.cc  prb_test.cc  prw_test.cc  test.cc
